--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^4.0.2",
     "socket.io": "^4.7.2",
     "sqlite": "^5.0.1",
