--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.4",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
