--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -28,6 +29,7 @@
     "vite-plugin-checker": "^0.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.4",
