add timer, Answer model, Answer controller, Answer handler

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "dev": "npm run lint && nodemon",
-    "lint": "eslint '**/*.ts'"
+    "lint": "eslint '**/*.ts'",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.1",
