--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "no-continue": 0,
     "no-prototype-builtins": 0,
     "max-classes-per-file": 1,
-    "no-fallthrough": 1
+    "no-fallthrough": 1,
+    "default-param-last": 1
   }
 }
