--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@socket.io/pm2": "latest",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "bcrypt": "^5.1.1",
@@ -19,6 +20,7 @@
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^4.0.2",
@@ -27,12 +29,12 @@
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "vite": "^4.4.5",
-    "vite-plugin-checker": "^0.6.2",
-    "@socket.io/pm2": "latest"
+    "vite-plugin-checker": "^0.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.19",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.4",
     "nodemon": "^3.0.1",
